--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,13 +1,13 @@
 <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 100px" >
 	<form class="form-signin" action="{{app_context}}/login_action" method="post" role="form" data-toggle="validator">
 		<input type="hidden" name="frm_referring_url" value="{{referring_url}}">
-		<h2 class="form-signin-heading">Please sign in</h2>
+		<h2 class="form-signin-heading">{{__ "Please sign in"}}</h2>
 		<div class="form-group">
-			<input type="email" name="email" class="form-control" placeholder="email address" value="" required autofocus>
+			<input type="email" name="email" class="form-control" placeholder="{{__ "email address"}}" value="" required autofocus>
 		</div>
 		<div class="form-group">
-			<input type="password" name="password" class="form-control" placeholder="Password" value="" required>
+			<input type="password" name="password" class="form-control" placeholder="{{__ "Password"}}" value="" required>
 		</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">{{__ "Sign in"}}</button>
 	</form>
 </div>
