--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -2,19 +2,19 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<ol class="breadcrumb">
-	  			<li><a href="{{app_context}}/">Home</a></li>
-	 			<li class="active">Articles</li>
+	  			<li><a href="{{app_context}}/">{{__ "Home"}}</a></li>
+	 			<li class="active">{{__ "Articles"}}</li>
 			</ol>
             <div class="col-lg-12">
-                <h1>Articles</h1>
+                <h1>{{__ "Articles"}}</h1>
             </div>
 			<div class="col-lg-12 search_bar pad-bottom">
 				<div class="input-group">
-					<input type="text" name="article_filter" id="article_filter" class="form-control input-lg" placeholder="Filter articles">
+					<input type="text" name="article_filter" id="article_filter" class="form-control input-lg" placeholder='{{__ "Filter articles"}}'>
 					<span class="input-group-btn">
-						<button class="btn btn-success btn-lg" id="btn_articles_filter">Filter</button>
-						<button class="btn btn-warning btn-lg" id="btn_articles_reset">Reset</button>
-                        <a class="btn btn-info btn-lg" href="{{app_context}}/articles/all">All</a>
+						<button class="btn btn-success btn-lg" id="btn_articles_filter">{{__ "Filter"}}</button>
+						<button class="btn btn-warning btn-lg" id="btn_articles_reset">{{__ "Reset"}}</button>
+                        <a class="btn btn-info btn-lg" href="{{app_context}}/articles/all">{{__ "All"}}</a>
 					</span>
 				</div>
 			</div>
@@ -22,8 +22,8 @@
 				<div class="col-lg-12">
 					<ul class="list-group">
 						<li class="list-group-item">
-							<span class="pull-right"><strong>Published</strong></span>
-							<strong>Articles - <span class="text-danger">Filtered term: {{search_term}} </span></strong>
+							<span class="pull-right"><strong>{{__ "Published"}}</strong></span>
+							<strong>{{__ "Articles"}} - <span class="text-danger">{{__ "Filtered term"}}: {{search_term}} </span></strong>
 						</li>
 						{{#each results}}
 							<li class="list-group-item">
@@ -31,7 +31,7 @@
                                     <div class="col-lg-8"><a href="{{app_context}}/edit/{{this._id}}">{{this.kb_title}}</a></div>
                                     <div class="col-lg-4 text-right">
                                         <input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}>
-                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>
+                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('{{__ "Are you sure you want to delete this article?"}}');"> <i class="fa fa-trash-o"></i></a>
                                     </div>
                                 </div>
 							</li>
@@ -42,8 +42,8 @@
 				<div class="col-lg-12">
 					<ul class="list-group">
 						<li class="list-group-item">
-							<span class="pull-right"><strong>Published</strong></span>
-							<strong>Article - Recent</strong>
+							<span class="pull-right"><strong>{{__ "Published"}}</strong></span>
+							<strong>{{__ "Article"}} - {{__ "Recent"}}</strong>
 						</li>
 						{{#each articles}}
 							<li class="list-group-item">
@@ -51,7 +51,7 @@
                                     <div class="col-lg-8"><a href="{{app_context}}/edit/{{this._id}}">{{this.kb_title}}</a></div>
                                     <div class="col-lg-4 text-right">
                                         <input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}>
-                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a>     
+                                        <a href="{{app_context}}/delete/{{this._id}}" onclick="return confirm('{{__ "Are you sure you want to delete this article?"}}');"> <i class="fa fa-trash-o"></i></a>
                                     </div>
                                 </div>
 							</li>
