--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 			<div class="input-group">
 				<input type="text" name="frm_search" id="frm_search" autocomplete="off" class="form-control input-lg" placeholder="Search the knowledge base">
 				<span class="input-group-btn">
-					<button class="btn btn-success btn-lg" id="btn_search" type="submit">Search</button>
+					<button class="btn btn-success btn-lg" id="btn_search" type="submit">{{__ "Search"}}</button>
 				</span>
 			</div>
             {{#ifCond config.settings.typeahead_search '===' true}}
@@ -24,7 +24,7 @@
         <div class="col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
             <div style="margin-top: 30px;">
                 <ul class="list-group">
-                    <li class="list-group-item list-group-heading">Featured articles</li>
+                    <li class="list-group-item list-group-heading">{{__ "Featured articles"}}</li>
                     {{#each featured_results}}
                         {{#if this.kb_permalink}}
                             <li class="list-group-item"><h5><a href="{{app_context}}/kb/{{this.kb_permalink}}">{{this.kb_title}}</a></h5></li>
@@ -42,7 +42,7 @@
 		{{#if search_term}}
 			<div style="margin-top: 30px;">
                 <ul class="list-group">
-                    <li class="list-group-item list-group-heading">Results for: {{search_term}}</li>
+                    <li class="list-group-item list-group-heading">{{__ "Results for"}}: {{search_term}}</li>
                     {{#each search_results}}
                         {{#if this.kb_permalink}}
                             <li class="list-group-item">
@@ -50,13 +50,13 @@
                                     <a href="{{app_context}}/kb/{{this.kb_permalink}}">{{this.kb_title}}</a>
                                     {{#if ../../config.settings.show_published_date}}
                                         {{#if ../../../config.settings.show_view_count}}
-                                            <span class="pull-right view_count">&nbsp; / <strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                            <span class="pull-right view_count">&nbsp; / <strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                         {{else}}
-                                            <span class="pull-right view_count"><strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                            <span class="pull-right view_count"><strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                         {{/if}}
                                     {{/if}}
                                     {{#if ../../config.settings.show_view_count}}
-                                        <span class="pull-right view_count"><strong>View count:</strong> {{view_count this.kb_viewcount}}</span>
+                                        <span class="pull-right view_count"><strong>{{__ "View count"}}:</strong> {{view_count this.kb_viewcount}}</span>
                                     {{/if}}
                                 </h5>
                             </li>
@@ -66,20 +66,20 @@
                                     <a href="{{app_context}}/kb/{{this._id}}">{{this.kb_title}}</a>
                                     {{#if ../../config.settings.show_published_date}}
                                         {{#if ../../../config.settings.show_view_count}}
-                                            <span class="pull-right view_count">&nbsp; / <strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                            <span class="pull-right view_count">&nbsp; / <strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                         {{else}}
-                                            <span class="pull-right view_count"><strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                            <span class="pull-right view_count"><strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                         {{/if}}
                                     {{/if}}
                                     {{#if ../../config.settings.show_view_count}}
-                                        <span class="pull-right view_count"><strong>View count: </strong>{{view_count this.kb_viewcount}}</span>
+                                        <span class="pull-right view_count"><strong>{{__ "View count"}}: </strong>{{view_count this.kb_viewcount}}</span>
                                     {{/if}}
                                 </h5>
                             </li>
                         {{/if}}
                     {{else}}
                         <li class="list-group-item">
-                            <h5>No results found</h5>
+                            <h5>{{__ "No results found"}}</h5>
                         </li>
                     {{/each}}
                 </ul>
@@ -87,7 +87,7 @@
 		{{else}}
 			<div style="margin-top: 30px;">
                 <ul class="list-group">
-                    <li class="list-group-item list-group-heading">Top articles</li>
+                    <li class="list-group-item list-group-heading">{{__ "Top articles"}}</li>
                     {{#each top_results}}
                             <li class="list-group-item">
                                 <h5>
@@ -98,13 +98,13 @@
                                 {{/if}}
                                 {{#if ../../config.settings.show_published_date}}
                                     {{#if ../../config.settings.show_view_count}}
-                                        <span class="pull-right view_count">&nbsp; / <strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                        <span class="pull-right view_count">&nbsp; / <strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                     {{else}}
-                                        <span class="pull-right view_count"><strong>Date:</strong> {{format_date this.kb_published_date}}</span>
+                                        <span class="pull-right view_count"><strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
                                     {{/if}}
                                 {{/if}}
                                 {{#if ../config.settings.show_view_count}}
-                                    <span class="pull-right view_count"><strong>View count:</strong> {{view_count this.kb_viewcount}}</span>
+                                    <span class="pull-right view_count"><strong>{{__ "View count"}}:</strong> {{view_count this.kb_viewcount}}</span>
                                 {{/if}}
                                 {{#if this.kb_password}}
                                     <span class="pull-right view_count" style="padding-right: 5px;"><i class="fa fa-key"></i></span>
