--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-lg-6">
                 <div class="form-group">
                     <label for="frm_kb_title">{{__ "Article title"}} *</label><br/>
-                    <input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{kb_title}}" required/>
+                    <input type="text" name="frm_kb_title" id="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{kb_title}}" required/>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-2">
@@ -53,6 +53,9 @@
                     <div class="btn-group btn-group-justified pull-right permalink_buttons" role="group" aria-label="...">
                         <a href="#" class="btn btn-success" id="validate_permalink" type="button">{{__ "Validate"}}</a>
                         <a href="#" class="btn btn-warning" id="generate_permalink" type="button">{{__ "Generate"}}</a>
+                        <a href="#" class="btn btn-warning disabled" id="generate_permalink_from_title" type="button">
+                            {{__ "Slug from title"}}
+                        </a>
                     </div>
                 </div>
             </div>
