--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -49,6 +49,7 @@
 		<link rel="stylesheet" href="{{app_context}}/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
+        <link rel="stylesheet" href="{{app_context}}/stylesheets/jasny-bootstrap.min.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
         <link rel='icon' href='/favicon.png' />
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
@@ -68,6 +69,7 @@
         <script src="{{app_context}}/javascripts/highlight.min.js"></script>
         <script src="{{app_context}}/javascripts/loadingoverlay.min.js"></script>
         <script src="{{app_context}}/simplemde/simplemde.min.js"></script>
+        <script src="{{app_context}}/javascripts/jasny-bootstrap.min.js"></script>
 		<script src="{{app_context}}/markdown-it/markdown-it.min.js"></script>
         {{#ifCond config.settings.typeahead_search '===' true}}
         <script src="{{app_context}}/lunr/lunr.min.js"></script>
@@ -130,6 +132,7 @@
 								<ul class="dropdown-menu">
                                     <li><a href="{{app_context}}/settings"><i class="fa fa-cog fa-fw"></i>&nbsp; {{__ "Settings"}}</a></li>
 									<li><a href="{{app_context}}/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; {{__ "Files"}}</a></li>
+                                    <li><a href="{{app_context}}/import"><i class="fa fa-upload fa-fw"></i>&nbsp; {{__ "Import"}}</a></li>
 									<li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; {{__ "Export"}}</a></li>
 									<li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; {{__ "Cleanup files"}}</a></li>
 								</ul>
