--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -62,9 +62,7 @@
                     <div class="btn-group btn-group-justified pull-right permalink_buttons" role="group" aria-label="...">
                         <a href="#" class="btn btn-success" id="validate_permalink" type="button">{{__ "Validate"}}</a>
                         <a href="#" class="btn btn-warning" id="generate_permalink" type="button">{{__ "Generate"}}</a>
-                        <a href="#" class="btn btn-warning disabled" id="generate_permalink_from_title" type="button">
-                            {{__ "Slug from title"}}
-                        </a>
+                        <a href="#" class="btn btn-info disabled" id="generate_permalink_from_title" type="button">{{__ "Slug from title"}}</a>
                     </div>
                 </div>
             </div>
