Fixes #142 - Twitter theme updated for search, context, live search & navbar fixes,

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -94,7 +94,7 @@
 						<span class="icon-bar"></span>
 					</button>
                     {{#ifCond config.settings.show_website_logo '===' true}}
-                    <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="{{app_context}}/logo.png" width="140"></a>
+                    <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="static/logo.png" width="140"></a>
                     {{else}}
                         {{#ifCond config.settings.website_title '===' 'openKB'}}
                         <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="{{app_context}}/logo.png" width="140"></a>
