--- a/public/themes/twitter/views/layouts/layout.hbs
+++ b/public/themes/twitter/views/layouts/layout.hbs
@@ -36,6 +36,7 @@
 		<link rel="stylesheet" href="/stylesheets/bootstrap-tokenfield.css">
         <link rel="stylesheet" href="/stylesheets/jpushmenu.css">
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
+        <script>{{{state}}}</script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
         <script src="/javascripts/bootstrap-validator.js"></script>
 		<script src="/javascripts/mermaid.min.js"></script>
@@ -46,6 +47,9 @@
         <script src="/javascripts/highlight.min.js"></script>
         <script src="{{app_context}}/simplemde/simplemde.min.js"></script>
 		<script src="{{app_context}}/markdown-it/markdown-it.min.js"></script>
+        {{#ifCond config.settings.typeahead_search '===' true}}
+        <script src="{{app_context}}/lunr/lunr.min.js"></script>
+        {{/ifCond}}
         <script src="/javascripts/jpushmenu.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
@@ -54,6 +58,8 @@
 		<div class="container-fluid">
 			{{{body}}}
 		</div>
+        <input type="hidden" value="{{app_context}}" id="app_context">
+        <input type="hidden" value="{{config.settings.links_blank_page}}" id="blank_links">
 		<input type="hidden" id="input_notify_message" value="{{message}}">
 		<input type="hidden" id="input_notify_message_type" value="{{message_type}}">
 		<div id="notify_message"></div>
