--- a/public/themes/twitter/views/partials/navbar.hbs
+++ b/public/themes/twitter/views/partials/navbar.hbs
@@ -2,50 +2,66 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">{{__ "Toggle navigation"}}</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">{{config.settings.website_title}}</a>
+            {{#ifCond config.settings.show_website_logo '===' true}}
+            <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="/static/logo.png" width="140"></a>
+            {{else}}
+                {{#ifCond config.settings.website_title '===' 'openKB'}}
+                <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="/static/logo.png" width="140"></a>
+                {{else}}
+                <a class="navbar-brand" href="{{app_context}}/">{{config.settings.website_title}}</a>
+                {{/ifCond}}
+            {{/ifCond}}
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 {{#if session.user}}
                     {{#if result._id}}
-                        <li><a href="/edit/{{result._id}}">Edit</a></li>
+                        <li><a href="{{app_context}}/edit/{{result._id}}">{{__ "Edit"}}</a></li>
                     {{/if}}
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{__ "Users"}} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; New</a></li>
-                            <li><a href="/users"><i class="fa fa-users fa-fw"></i>&nbsp; Edit</a></li>
-                            <li><a href="/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; My account</a></li>
+                            {{#ifCond session.is_admin '==' 'true'}}
+                            <li><a href="{{app_context}}/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; {{__ "New"}}</a></li>
+                            <li><a href="{{app_context}}/users"><i class="fa fa-users fa-fw"></i>&nbsp; {{__ "Edit"}}</a></li>
+                            {{/ifCond}}
+                            <li><a href="{{app_context}}/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; {{__ "My account"}}</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Article <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{__ "Article"}} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; New</a></li>
-                            <li><a href="/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; Edit</a></li>
+                            <li><a href="{{app_context}}/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; {{__ "New"}}</a></li>
+                            <li><a href="{{app_context}}/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; {{__ "Edit"}}</a></li>
                         </ul>
                     </li>
+                    {{#ifCond session.is_admin '==' 'true'}}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; Files</a></li>
-                            <li><a href="/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; Export</a></li>
-                            <li><a href="/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; Cleanup files</a></li>
+                            <li><a href="{{app_context}}/settings"><i class="fa fa-cog fa-fw"></i>&nbsp; {{__ "Settings"}}</a></li>
+                            <li><a href="{{app_context}}/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; {{__ "Files"}}</a></li>
+                            <li><a href="{{app_context}}/import"><i class="fa fa-upload fa-fw"></i>&nbsp; {{__ "Import"}}</a></li>
+                            <li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; {{__ "Export"}}</a></li>
+                            <li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; {{__ "Cleanup files"}}</a></li>
                         </ul>
                     </li>
-                    <li><a href="/logout">Logout</a></li>
+                    {{/ifCond}}
+                    <li><a href="{{app_context}}/logout">{{__ "Logout"}}</a></li>
                 {{else}}
                     {{#if config.settings.suggest_allowed}}
-                        <li><a href="/suggest">Suggest</a></li>
+                        <li><a href="{{app_context}}/suggest">{{__ "Suggest"}}</a></li>
                     {{/if}}
-                    <li><a href="/login">Login</a></li>
-                {{/if}}	
+                    {{#ifCond config.settings.show_logon '==' true}}
+                        <li><a href="{{app_context}}/login">{{__ "Login"}}</a></li>
+                    {{/ifCond}}
+                {{/if}}
             </ul>
         </div>
     </div>
-</nav>	
+</nav>
